--- a/ExternalCoreProjects/Virtu/Virtu.csproj
+++ b/ExternalCoreProjects/Virtu/Virtu.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JetBrains.Annotations, Version=2019.1.1.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325">
+      <HintPath>..\..\packages\JetBrains.Annotations.2019.1.1\lib\net20\JetBrains.Annotations.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\References\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -71,6 +75,9 @@
     <Compile Include="Speaker.cs" />
     <Compile Include="Video.cs" />
     <Compile Include="VideoData.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
